--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-color: black;
+            background-color: #222C3C; /* Dark blue background color */
             font-family: "Arial", sans-serif;
         }
         
@@ -12,12 +12,12 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: white;
-            text-shadow: 0 0 10px white;
+            color: #D4D4D4; /* Light gray text color */
+            text-shadow: 0 0 10px #D4D4D4; /* Light gray text shadow */
             animation: fade 20s linear infinite;
-            font-family: "Playfair Display", serif;
+            font-family: "Great Vibes", cursive;
             font-size: 4rem;
-            font-weight: bold;
+            font-weight: normal;
             letter-spacing: 2px;
         }
         
@@ -30,7 +30,8 @@
             }
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link rel="icon" href="./media/heart.png" type="image/png"> <!-- Add the link tag for favicon -->
 </head>
 <body>
     <div class="fade-in-out">
