--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link rel="icon" href="./media/heart.png" type="image/png"> <!-- Add the link tag for favicon -->
+    <link rel="icon" href="heart.png" type="image/png"> <!-- Add the link tag for favicon -->
 </head>
 <body>
     <div class="fade-in-out">
-        <h1>poetu.io</h1>
+        <a href="https://instagram.com/themanintheblue" target="_blank" style="text-decoration: none; color: inherit;"> <!-- Add the target="_blank" attribute to open in a new window -->
+            <h1>poetu.io</h1>
+        </a>
     </div>
 </body>
 </html>
