--- a/index.html
+++ b/index.html
@@ -6,63 +6,103 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="icon" href="./media/heart.png" type="image/png"> <!-- Add the correct path for the favicon -->
 
-    <script>
-document.addEventListener('DOMContentLoaded', function() {
-    var images = ['./media/moon.jpg', './media/moon1.jpg', './media/moon2.jpg', './media/ink.jpg'];
-    var randomImageIndex = Math.floor(Math.random() * images.length);
-    var randomImage = images[randomImageIndex];
-    document.body.style.backgroundImage = 'url(' + randomImage + ')';
-
-    // Make the introduction card draggable
-    var card = document.querySelector('.introduction-card');
-    var isDragging = false;
-    var initialX;
-    var initialY;
-
-    card.addEventListener('mousedown', function(e) {
-        isDragging = true;
-        initialX = e.clientX - card.offsetLeft;
-        initialY = e.clientY - card.offsetTop;
-    });
-
-    document.addEventListener('mousemove', function(e) {
-        if (isDragging) {
-            e.preventDefault();
-            card.style.left = e.clientX - initialX + 'px';
-            card.style.top = e.clientY - initialY + 'px';
+    <style>
+        /* Add your CSS styles here */
+        .introduction-card {
+            background-color: #FFFFFF;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            max-width: 400px;
+            margin: 0 auto;
+            text-align: center;
+            opacity: 0.9; /* Set the opacity */
+            cursor: move; /* Set the cursor style to indicate draggability */
+            position: absolute; /* Position the card absolutely for draggable behavior */
+            left: 50%;
+            top: 80%; /* Adjust the initial position to start below the text */
+            transform: translate(-50%, -50%);
         }
-    });
+        
+        .introduction-card h2 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+        
+        .introduction-card p {
+            font-size: 1rem;
+            color: #666666;
+        }
+    </style>
 
-    document.addEventListener('mouseup', function() {
-        isDragging = false;
-    });
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var images = ['./media/moon.jpg', './media/moon1.jpg', './media/moon2.jpg', './media/ink.jpg'];
+            var randomImageIndex = Math.floor(Math.random() * images.length);
+            var randomImage = images[randomImageIndex];
+            document.body.style.backgroundImage = 'url(' + randomImage + ')';
 
-    // Fetch introduction data from JSON file
-    fetch('./layouts/data/json/intro.json')
-        .then(response => response.json())
-        .then(data => {
-            var title = data.title;
-            var description = data.description;
+            // Make the introduction card draggable
+            var card = document.querySelector('.introduction-card');
+            var isDragging = false;
+            var initialX;
+            var initialY;
 
-            // Create heading element
-            var headingElement = document.createElement('h2');
-            headingElement.textContent = title;
+            function startDragging(e) {
+                if (e.type === 'touchstart') {
+                    initialX = e.touches[0].clientX - card.offsetLeft;
+                    initialY = e.touches[0].clientY - card.offsetTop;
+                } else {
+                    initialX = e.clientX - card.offsetLeft;
+                    initialY = e.clientY - card.offsetTop;
+                }
+                isDragging = true;
+            }
 
-            // Create paragraph element
-            var paragraphElement = document.createElement('p');
-            paragraphElement.textContent = description;
+            function dragCard(e) {
+                if (!isDragging) return;
+                e.preventDefault();
+                var x = e.type === 'touchmove' ? e.touches[0].clientX : e.clientX;
+                var y = e.type === 'touchmove' ? e.touches[0].clientY : e.clientY;
+                card.style.left = x - initialX + 'px';
+                card.style.top = y - initialY + 'px';
+            }
 
-            // Append heading and paragraph to introduction card
-            var introductionCard = document.querySelector('.introduction-card');
-            introductionCard.appendChild(headingElement);
-            introductionCard.appendChild(paragraphElement);
-        })
-        .catch(error => {
-            console.log('Error fetching introduction data:', error);
+            function stopDragging() {
+                isDragging = false;
+            }
+
+            card.addEventListener('mousedown', startDragging);
+            card.addEventListener('touchstart', startDragging);
+            document.addEventListener('mousemove', dragCard);
+            document.addEventListener('touchmove', dragCard);
+            document.addEventListener('mouseup', stopDragging);
+            document.addEventListener('touchend', stopDragging);
+
+            // Fetch introduction data from JSON file
+            fetch('./layouts/data/json/intro.json')
+                .then(response => response.json())
+                .then(data => {
+                    var title = data.title;
+                    var description = data.description;
+
+                    // Create heading element
+                    var headingElement = document.createElement('h2');
+                    headingElement.textContent = title;
+
+                    // Create paragraph element
+                    var paragraphElement = document.createElement('p');
+                    paragraphElement.textContent = description;
+
+                    // Append heading and paragraph to introduction card
+                    var introductionCard = document.querySelector('.introduction-card');
+                    introductionCard.appendChild(headingElement);
+                    introductionCard.appendChild(paragraphElement);
+                })
+                .catch(error => {
+                    console.log('Error fetching introduction data:', error);
+                });
         });
-});
-
-
     </script>
 </head>
 <body>
@@ -72,6 +112,7 @@ document.addEventListener('DOMContentLoaded', function() {
         </a>
     </div>
     <div class="introduction-card">
+        <!-- The heading and paragraph elements will be dynamically added here -->
     </div>
 </body>
 </html>
