--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
             <h1>poetu.io</h1>
         </a>
     </div>
-    <div class="introduction-card">
-        <!-- The heading and paragraph elements will be dynamically added here -->
-    </div>
+   <!-- <div class="introduction-card">  </div> -->
 </body>
 </html>
